--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Coba GIT REMOTE</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dicta expedita neque quos aliquam exercitationem explicabo dolor. Dignissimos vero repellendus perferendis veritatis illo delectus fuga corrupti dolore facere dolor? Quam!</p>
 </body>
 </html>
